# port-manager

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/plans/: 2026-02-12-port-manager-design.md  2026-02-12-port-manager-implementation.md  2026-02-13-datagrip-lite-design.md  2026-02-13-datagrip-lite-implementation.md  2026-02-13-mission-control-implementation.md  2026-02-13-mission-control-redesign.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_ngrok.sql  003_pg_connections.sql
src-tauri/src/: auth.rs  crypto.rs  db.rs  favorites.rs  file_activator.rs  forward.rs  k8s.rs  kubeconfig.rs  lib.rs  main.rs  ngrok.rs  pgmanager.rs  ports.rs  settings.rs  vault.rs  vault_db.rs
src/assets/tokens/: colors.css  semantic.css
src/assets/tokens/themes/: cyberpunk.css  dark.css  light.css  matrix.css
src/components/db/: PmAddColumnModal.vue  PmContextMenu.vue  PmCreateTableModal.vue  PmDropConfirmModal.vue  PmExplainNode.vue  PmExplainView.vue  PmQueryTabs.vue  PmSchemaTree.vue  PmSqlEditor.vue
src/components/layout/: AppLayout.vue  PmSidebar.vue  PmStatusBar.vue  PmToastContainer.vue
src/components/ui/: PmBadge.vue  PmButton.vue  PmCodeEditor.vue  PmConnectionModal.vue  PmCredentialPicker.vue  PmInput.vue  PmMatrixRain.vue  PmMetricCard.vue  PmModal.vue  PmSelect.vue  PmSkeletonLoader.vue  PmSplitPane.vue  PmStatusDot.vue  PmTable.vue  PmThemeSwitcher.vue  PmToast.vue  PmTreeView.vue  index.ts
src/composables/: useAuth.ts  useDbDetection.ts  useForwards.ts  useK8s.ts  useNgrok.ts  usePgManager.ts  usePorts.ts  useTheme.ts  useToast.ts  useUpdater.ts  useVault.ts
src/router/: index.ts
src/types/: k8s.ts  pgmanager.ts  ports.ts
src/views/: DashboardView.vue  DatabaseView.vue  ForwardsView.vue  K8sBrowserView.vue  LoginView.vue  NgrokView.vue  SettingsView.vue  VaultView.vue
